# prefect-pack

./: .gitignore  .pre-commit-config.yaml  Dockerfile.demo  Dockerfile.speedtest  LICENSE  Makefile  README.md  justfile  prefect.yaml  pyproject.toml
.github/workflows/: ci.yaml  deploy.yaml  tests.yaml
apps/do_celery_stuff/: README  api.py  tasks.py
examples/: simple_serve.py  tag_based_trigger.py
examples/do_celery_stuff/: compose.yaml  tasks.py
examples/run_a_prefect_server/docker_compose/: compose.yaml
examples/run_a_prefect_server/docker_compose/multi-server/: Dockerfile  compose.yaml
examples/run_a_prefect_server/docker_compose/with_a_reverse_proxy/: README.md  compose.yaml  nginx.conf  simulate_work.py
examples/run_a_prefect_worker/on_docker/: Dockerfile
examples/run_a_prefect_worker/on_k8s/: README.md  values.yaml
examples/run_a_prefect_worker/on_local/: README.md  emoji_flow.py  flow1.py  flow2.py  pandas_flow.py  prefect.yaml  requirements.txt  smoke_test
examples/run_flows_on_docker/: Dockerfile  buy.py
examples/run_flows_on_docker/with_custom_cwd/: Dockerfile  README.md  requirements.txt  workflow.py
examples/run_flows_on_managed_pool/: workflow.py
examples/run_flows_via_serve/: conditional_source.py
flows/: hello.py  uses_k8s_secret.py
flows/be_modal/: Makefile  prefect.yaml  some_flow.py
flows/nested_project/: prefect.yaml  some_flow.py
flows/network_speedtest/: main.py  requirements.txt
flows/use_pandas/use_polars/: main.py  pyproject.toml
flows/use_polars/: main.py  pyproject.toml
flows/with_special_deps/: Dockerfile  deploy.py  requirements.txt
src/prefect_pack/: __init__.py  utils.py
src/prefect_pack/steps/: cached_docker.py  events.py  utils.py
tests/: conftest.py
tests/flows/: test_hello.py
tests/utils/: test_parsing.py
