[project]
name = "prefect-pack"
dynamic = ["version"]
description = "Minimal LLM friendly Python client for GitHub API."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = ["prefect", "prefect-docker"]

[project.optional-dependencies]
dev = ["ipython", "pre-commit>=2.21,<4.0", "ruff", "prefect-pack[tests]"]

tests = [
    "flaky",
    "pytest-asyncio>=0.18.2,!=0.22.0,<0.23.0",
    "pytest-env>=0.8,<2.0",
    "pytest-rerunfailures>=10,<14",
    "pytest-sugar>=0.9,<2.0",
    "pytest~=7.3.1",
    "pytest-timeout",
    "pytest-xdist",
]

[project.urls]
Code = "https://github.com/zzstoatzz/prefect-pack"


[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/prefect_pack/_version.py"

[tool.pytest.ini_options]
markers = [
    "integration: mark test as integration test",
    "slow: mark test as slow",
]
timeout = 20
testpaths = ["tests"]

norecursedirs = [
    "*.egg-info",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    "node_modules",
]

asyncio_mode = 'auto'

filterwarnings = [
    "ignore:Skipped unsupported reflection of expression-based index",
]


[tool.ruff]
lint.extend-select = ["I"]
target-version = "py311"
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['I', 'F401', 'E402']
"conftest.py" = ["F401", "F403"]
'tests/fixtures/*.py' = ['F403']
