[project]
name = "prefect-pack"
dynamic = ["version"]
description = "Opinionated setup for Prefect projects"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = ["prefect[docker]"]

[dependency-groups]
dev = ["ipython", "pre-commit>=2.21,<4.0", "prefect-pack[tests]", "ruff"]

[project.optional-dependencies]
tests = [
    "flaky",
    "pre-commit",
    "pytest-asyncio>=0.18.2,!=0.22.0,<0.23.0",
    "pytest-env>=0.8,<2.0",
    "pytest-rerunfailures>=10,<14",
    "pytest-sugar>=0.9,<2.0",
    "pytest~=7.3.1",
    "pytest-timeout",
    "pytest-xdist",
]

speedtest = ["speedtest-cli"]

[project.urls]
Code = "https://github.com/zzstoatzz/prefect-pack"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prefect_pack"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"


[tool.pytest.ini_options]
markers = [
    "integration: mark test as integration test",
    "slow: mark test as slow",
]
timeout = 20
testpaths = ["tests"]

norecursedirs = [
    "*.egg-info",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    "node_modules",
]

asyncio_mode = 'auto'

filterwarnings = [
    "ignore:Skipped unsupported reflection of expression-based index",
]


[tool.ruff]
lint.extend-select = ["I", "UP"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py312"


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['I', 'F401', 'E402']
"conftest.py" = ["F401", "F403"]
'tests/fixtures/*.py' = ['F403']

[tool.ruff.lint.pydocstyle]
convention = "google"
